# bootstrap_project

./: CLAUDE.md  Makefile  README.md  implemented_features_report.md  new_features.md  pyproject.toml  ruff.toml
examples/: README.md  ai_project_metadata.yaml  simple_metadata.yaml  tui_app_metadata.yaml
src/bootstrap_project/: __init__.py  __main__.py
