[project]
name = "bootstrap_project"
dynamic = [
    "version",
]
description = "Bootstrap new python project"
url = "https://github.com/paulrobello/bootstrap_project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "python",
    "project",
    "tooling",
]
dependencies = [
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/bootstrap_project"
Documentation = "https://github.com/paulrobello/bootstrap_project/blob/main/README.md"
Repository = "https://github.com/paulrobello/bootstrap_project"
Issues = "https://github.com/paulrobello/bootstrap_project/issues"
Discussions = "https://github.com/paulrobello/bootstrap_project/discussions"
Wiki = "https://github.com/paulrobello/bootstrap_project/wiki"

[project.scripts]
bsp = "bootstrap_project.__main__:app"

[build-system]
requires = [
    "hatchling",
    "wheel",
]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "build>=1.2.1",
    "pyright>=1.1.379",
    "pre-commit>=3.8.0",
    "ruff>=0.7.0",
    "hatchling>=1.27.0",
]

[tool.hatch.version]
path = "src/bootstrap_project/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/bootstrap_project",
]
include = [
    "*.py",
    "py.typed",
    "*.png",
    "*.md",
    "*.tcss",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/bootstrap_project",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib",
]
